# acessflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api-s3-test.txt  boto3-local-test.txt  main.py  pyproject.toml  test.txt
app/: dependencies.py  main.py
app/core/: config.py  context.py  exceptions.py  lifespan.py  logger.py  middleware.py  responses.py
app/routes/: health.py  upload.py
app/services/: file_service.py
app/storage/: base.py  local.py  s3.py
app/validators/: file_validator.py
scripts/: create_s3_bucket.ps1  delete_s3_bucket.ps1
tests/: test_dependencies.py  test_file_validator.py  test_health.py  test_upload.py  test_upload_route.py
uploads/: test.txt
